# project_pin_pyre

./: .gitignore  Makefile  docker-compose-local.yaml  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 2025_10_02_1242-384a5e9156bb_create_table.py  2025_10_02_1637-593e56d0a667_create_users_table.py  2025_10_02_1700-729e9e79714d_added_users_table.py  2025_10_02_1901-e8ab35465cea_added_posts_table.py
api/: handlers.py  models.py
api/routers/: __init__.py
api_1/: __init__.py
api_1/products/: crud.py  deps.py  schemas.py  views.py
api_practice/users/: schemas.py  views.py
core/: config.py
core/models/: __init__.py  db_util.py  post.py  product.py  user.py
db/: dals.py  models.py  session.py
